Removed constructor usage for primitive wrapper types which are deprecated since java 9